--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
+    "@types/yup": "^0.29.11",
     "aws-amplify": "^4.1.1",
+    "formik": "^2.2.9",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
@@ -23,7 +25,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
