--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^3.6.2",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-source-graphql": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
