--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,13 @@
     "@aws-cdk/aws-cloudfront": "^1.109.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.109.0",
     "@aws-cdk/aws-dynamodb": "^1.109.0",
+    "@aws-cdk/aws-lambda": "^1.109.0",
     "@aws-cdk/aws-s3": "^1.109.0",
+    "@aws-cdk/aws-s3-deployment": "^1.109.0",
     "@aws-cdk/core": "1.109.0",
+    "@types/aws-lambda": "^8.10.77",
+    "aws-lambda": "^1.0.6",
+    "aws-sdk": "^2.932.0",
     "source-map-support": "^0.5.16"
   }
 }
