--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2": "^1.109.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.109.0",
     "@aws-cdk/aws-appsync": "^1.109.0",
     "@aws-cdk/aws-cloudfront": "^1.109.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.109.0",
